<resources>
    <string name="app_name">GoZayaan Test</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_icon">Category Icon</string>
    <string name="new_work_ny">New York, NY</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="search">Search</string>
    <string name="recommended">Recommended</string>
    <string name="see_all">See All</string>
    <string name="recommendation_image">Recommended Image</string>
    <string name="bookmark_image">Bookmark Image</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="about_the_trip">About the trip</string>
    <string name="book_now">Book Now</string>
    <string name="fare_with_currency_sign">%1$s %2$s</string>
    <string name="per_day">/%1$s</string>
    <string name="back_button_icon">Back Button Icon</string>
    <string name="location_image">Location Image</string>
</resources>