<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal_black"
    tools:context=".presentation.home.HomeActivity">

    <!-- Fixed top layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/categoryIcon"
            android:layout_width="@dimen/px_24"
            android:layout_height="@dimen/px_24"
            android:contentDescription="@string/category_icon"
            android:src="@drawable/ic_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profileImage"
            app:layout_constraintStart_toEndOf="@+id/categoryIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <!-- ImageView for the location icon -->
            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="@dimen/px_17"
                android:layout_height="@dimen/px_17"
                android:contentDescription="@string/location_image"
                android:src="@drawable/ic_location" />

            <!-- TextView for the location label -->
            <TextView
                android:id="@+id/currentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:alpha="0.5"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/new_work_ny"
                android:textColor="@color/white_90"
                android:textSize="@dimen/px_12_text_size" />

        </LinearLayout>


        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/px_32"
            android:layout_height="@dimen/px_32"
            android:background="@drawable/bg_rectangle_profile"
            android:contentDescription="@string/profile_avatar"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Scrollable content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_54"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/bg_search_layout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:alpha="0.3"
                    android:drawablePadding="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/rubik_regular"
                    android:maxLines="1"
                    android:text="@string/search"
                    android:textColor="@color/white_90"
                    android:textSize="@dimen/px_14_text_size"
                    app:drawableStartCompat="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/popularCategoriesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_top"
                android:ellipsize="end"
                android:fontFamily="@font/rubik_medium"
                android:maxLines="1"
                android:text="@string/popular_categories"
                android:textColor="@color/white_90"
                android:textSize="@dimen/px_18_text_size"
                app:layout_constraintTop_toBottomOf="@id/searchLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularCategoriesRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_marginStart="@dimen/first_item_spacing"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/popularCategoriesTitle"
                tools:itemCount="4"
                tools:listitem="@layout/item_popular_categories" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recommendedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                app:layout_constraintTop_toBottomOf="@id/popularCategoriesRV">

                <TextView
                    android:id="@+id/recommended"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/recommended"
                    android:textColor="@color/white_90"
                    android:textSize="@dimen/px_18_text_size"
                    app:layout_constraintEnd_toStartOf="@+id/seeAll"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginEnd="@dimen/margin_horizontal"
                    android:contentDescription="@string/see_all"
                    android:paddingVertical="@dimen/_5sdp"
                    android:src="@drawable/text_see_all"
                    app:layout_constraintBottom_toBottomOf="@+id/recommended"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/recommended" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommendedRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/recommended"
                    tools:itemCount="10"
                    tools:layout_marginStart="@dimen/first_item_spacing"
                    tools:listitem="@layout/item_recommended_home" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
